--- a/mpRotAtt/mpRotAtt.csproj
+++ b/mpRotAtt/mpRotAtt.csproj
@@ -94,7 +94,7 @@
     <Resource Include="Resources\mpRotAtt_32x32.png" />
     <Resource Include="Resources\mpRotAtt_32x32_dark.png" />
   </ItemGroup>
-   <!-- CHOOSE -->
+  <!-- CHOOSE -->
   <Choose>
     <When Condition=" '$(Configuration)'=='A2013' ">
       <ItemGroup>
@@ -171,12 +171,14 @@
   </Choose>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2019.1.3</Version>
+      <Version>2020.1.0</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="ModPlusAPI">
-      <Version>1.6.0</Version>
+      <Version>4.7.0</Version>
       <ExcludeAssets>runtime</ExcludeAssets>
+      <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="StyleCop.Analyzers">
       <Version>1.1.118</Version>
